vlib/v/checker/tests/incorrect_name_sum_type.out
vlib/v/checker/tests/incorrect_name_sum_type.vv:1:1: error: sum type `integer` must begin with capital letter
    1 | type integer = i8 | i16 | int | i64
      | ~~~~~~~~~~~~
    2 | type Integer = i8 | i16 | int | i64
    3 |
vlib/v/checker/tests/incorrect_name_sum_type.vv:4:1: error: method overrides built-in sum type method
    2 | type Integer = i8 | i16 | int | i64
    3 | 
    4 | fn (i Integer) type_name() {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~
    5 | }
    6 |
